fix : AI chatbot redirect to url,deploy chatbot.